# python-tdd

./: pyproject.toml
src/: main.py
src/tdd_python/: bacon_com_ovos.py  calculadora.py  pessoa.py
tests/: __init__.py  test_bacon_com_ovos.py  test_calculadora.py  test_pessoa.py
